<resources>
    <string name="app_name">外婆打电话</string>


    <string name="loading">加载中…</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="no_more">没有更多了~</string>

    <string name="permission_phone">电话权限</string>
    <string name="permission_storage">存储权限</string>
    <string name="permission_contacts">联系人权限</string>
    <string name="permission_default">多情的权限</string>
    <string name="title_call_phone">请允许电话权限</string>
    <string name="title_storage">请允许存储权限</string>
    <string name="title_contacts">请允许联系人权限</string>
    <string name="title_denied">您拒绝了我！</string>
    <string name="title_crying_warning">陛下不要啊！</string>
    <string name="content_storage">这个应用需要获取存储空间，为您存储电话信息，否则您将遇到无法无天的错误</string>
    <string name="content_call_phone">这个应用需要获取电话权限，才能打电话哦，不然电话三生三世都打不通的哦</string>
    <string name="content_write_contacts">这个应用需要获取联系人权限，才能查看联系人哦，不然您看到个鬼哦</string>
    <string name="content_setting">您已无情地拒绝了这个应用温柔的请求，它可能出现神出鬼没的问题，请到[系统设置]中打开【%1$s】</string>
    <string name="content_recheck">您已无情地拒绝了这个应用温柔的请求，它可能出现神出鬼没的问题，请允许【%1$s】请求</string>
    <string name="content_crying_warning">陛下果然还是不给这个应用权限吗？它可能出现鬼哭狼嚎的问题哦！请陛下三思！</string>
    <string name="go_setting">去设置</string>
    <string name="go_check">去允许</string>

    <string name="frequent_contacts">常用联系人</string>
    <string name="add_frequent_contacts">添加常用联系人</string>
    <string name="to_dialler">键盘拨号</string>
    <string name="no_frequent_contacts">您还没有常用联系人，快去添加吧~</string>


    <string name="search_contact_hint">输入搜索信息</string>
    <string name="no_contacts_now">您还没有联系人哦~</string>
    <string name="add_contact_success">添加成功</string>
    <string name="add_contact_failed">添加失败</string>
    <string name="add_contact_over_max">最多添加10个常用联系人！</string>
    <string name="remove_contact_failed">移除失败</string>
    <string name="remove_contact_success">移除成功</string>


    <string name="remove_contact">移除</string>
    <string name="contact_action_dial">拨号</string>
    <string name="contact_action_modify_info">修改信息</string>

    <string name="call_err_contact">获取联系人信息出错，请退出应用后重试!</string>
    <string name="call_take_photo">拍 照</string>
    <string name="call_choose_photo">相册选择</string>

    <string name="edit_contact_title">修改联系人</string>
    <string name="click_4_modify_avatar">点击修改头像</string>
    <string name="edit_name">姓名：</string>
    <string name="edit_phone">手机：</string>
    <string name="edit_name_hint">请输入姓名</string>
    <string name="edit_phone_hint">请输入电话</string>
    <string name="edit_save">保存修改</string>
    <string name="edit_save_success">保存成功！</string>
    <string name="edit_save_failed">保存失败</string>
    <string name="edit_go2_system_contact">您可以选择去【系统联系人】界面编辑该联系人，但需要退出本应用，并重新添加该联系人到 常用联系人列表</string>
    <string name="edit_go2_edit">去编辑</string>
    <string name="edit_hint_must_number">手机必须是数字</string>
    <string name="edit_hint_empty_name">姓名不能为空</string>
    <string name="edit_hint_empty_phone">手机不能为空</string>
    <string name="edit_hint_not_phone">不是有效的手机号码</string>
    <string name="modify_avatar_failed">修改头像失败，请退出应用后重试！</string>

</resources>